feat: - 提供了对svgComponent的支持 - 支持了less with css module - 编写了自定义webpack plugin , 用于打印日志 - 预研了i18n国际化方案和技术支持(主要是uniSwap正在使用的crowdin) , 因还没有完善的产品规划和设计 , 不着急实施. - 优化了webpack的配置,去除冗余项 - 支持了router - 加入了d.ts声明文件 - 提供了对业务组件的统一封装API , 还在持续完善中 - 完善了tsconfig和webpack的alias,使得运行时统一使用扁平化路径 - 使用MUI搭建DEMO页面 , 用于评估客制化UI方案(进行中)

--- a/Public/index.template.ejs
+++ b/Public/index.template.ejs
@@ -15,8 +15,8 @@
       href="https://assets.2dfire.com/frontend/ff00e1bd198c1043f705502488e31c85.png"
       sizes="64x64"
     />
-    <div id="asd" style="display: none"><%=JSON.stringify(htmlWebpackPlugin) %></div>
-    <title>eth</title>
+    <div htmlWebpackPlugin style="display: none"><%=JSON.stringify(htmlWebpackPlugin,null,3) %></div>
+    <title>Dation-web</title>
   </head>
   <body>
     <div id="react-app-root"></div>
