--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -1,7 +1,7 @@
 //global CSS here
 
-:global{
-	html,body,#react-app-root {
+:global {
+	html, body, #react-app-root {
 		margin: 0;
 		padding: 0;
 		height: 100%;
@@ -10,8 +10,30 @@
 	}
 	
 	* {
-		font-family: sans-serif ,"Microsoft YaHei UI";
+		font-family: sans-serif, "Microsoft YaHei UI";
 	}
 	
+	.ant-btn {
+		border-color: #F4F4F4;
+	}
+	
+	.ant-dropdown {
+		
+	}
+	
+	.ant-dropdown-menu {
+		border-radius: 12px;
+		padding: 0;
+		transform: rotate(0deg);
+		overflow-x: hidden;
+		box-shadow: 0 17px 62px 0px rgb(0 0 0 / 18%) ,
+						0 11px 29px 0   rgb(0 0 0 / 8%) ,
+						0 9px  18px 0px	 rgb(0 0 0 / 5%);
+	}
+	
+	.ant-dropdown-menu-item {
+		//border-radius: 12px;
+		
+	}
 }
 
