feat: 创建了react-tempalte模板文件 , 用于快速新建业务模块 feat: 调整了ejs文件模板, 解决了react-router路由错误的问题 feat: 简单配置了全局字体 feat: 踩坑并解决了react-router不能正常使用的问题 , 并封装了统一解决方案.把路由统一提取到router.tsx进行管理 feat: 调试hot-loader与react搭配产生HMR不能正常触发需要reload的问题. feat: 新建了路由用于测试全局皮肤与定制化UI feat: svg支持了react-component组件化 , 可以条件渲染svg内的某些线条 feat: 增加了globalState和其全局dts声明 , 用于控制如皮肤,全球化等状态渲染 feat: 优化了wrapper逻辑, 支持防止重复wrap等 fix: 修复wrappers/didRender逻辑问题 fix: mobxState ts泛型错误

--- a/Public/index.template.ejs
+++ b/Public/index.template.ejs
@@ -9,19 +9,19 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <link
+    <link
       rel="icon"
       type="image/png"
       href="https://assets.2dfire.com/frontend/ff00e1bd198c1043f705502488e31c85.png"
       sizes="64x64"
     />
     <div htmlWebpackPlugin style="display: none"><%=JSON.stringify(htmlWebpackPlugin,null,3) %></div>
-    <title>Dation-web</title>
+    <title>Daotion-web</title>
   </head>
   <body>
     <div id="react-app-root"></div>
   </body>
   <%= htmlWebpackPlugin.files.js.reduce((accu , filePath ) => { return accu + `
-  <script src="./${filePath}"></script>
+  <script src="/${filePath}"></script>
   \n`; },``) %>
 </html>
