--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -6,11 +6,11 @@
 		padding: 0;
 		height: 100%;
 		width: 100%;
-		
+		font-family: inter,sans-serif,"Microsoft YaHei UI"
 	}
 	
 	* {
-		font-family: sans-serif, "Microsoft YaHei UI";
+		font-family: inter,sans-serif,"Microsoft YaHei UI"
 	}
 	
 	.ant-btn {
@@ -29,6 +29,7 @@
 		box-shadow: 0 17px 62px 0px rgb(0 0 0 / 18%) ,
 						0 11px 29px 0   rgb(0 0 0 / 8%) ,
 						0 9px  18px 0px	 rgb(0 0 0 / 5%);
+		//box-shadow: 0px 16px 64px -48px rgba(31, 47, 70, 0.4);
 	}
 	
 	.ant-dropdown-menu-item {
