--- a/src/pages/DemoLayout/style.module.less
+++ b/src/pages/DemoLayout/style.module.less
@@ -2,7 +2,6 @@
 	display: flex;
 	height: 100%;
 	overflow: auto;
-	min-width: 960px;
 	
 	div {
 		
@@ -18,9 +17,11 @@
 		background-color: rgb(247, 247, 247);
 		flex: 1 0 auto;
 		flex-flow: column nowrap;
+		width: calc(100% - 312px);
+		
 		
 		> .top-banner {
-			background-color: white;
+			background-color: transparent;
 			height: 80px;
 			flex-grow: 0;
 			width: 100%;
@@ -33,10 +34,6 @@
 				flex-shrink: 0;
 				height: 100%;
 				align-items: center;
-				
-				
-				
-				
 				
 				
 			}
@@ -141,13 +138,15 @@
 	transition: box-shadow 0.35s ease;
 	user-select: none;
 	cursor: pointer;
-	display : flex;
-	flex-flow : column nowrap;
-	align-items : center;
-	padding : 24px;
-	border-radius : 16px;
-	border: 2px solid #E6E8EC;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	padding: 32px;
+	border-radius: 16px;
+	border: 2px solid #e6e8ec;
 	margin-right: 16px;
+	margin-bottom: 16px;
+	
 	
 	> div {
 		width: 180px;
@@ -156,10 +155,12 @@
 		flex-flow: column nowrap;
 		align-items: center;
 	}
-	&:hover{
-		padding: 26px 26px 26px 26px;
+	
+	&:hover {
+		padding: 34px;
 		border: none;
-		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15) ;
+		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+		
 		> div {
 			//width: 184px;
 			//height: 248px;
@@ -200,6 +201,8 @@
 	&:hover {
 		background-color: #D2E3FC;
 		color : #3772FF;
-		
+		border: none;
+		padding-top: 13px;
+		padding-bottom: 12px;
 	}
 }
