--- a/src/pages/DemoLayout/style.module.less
+++ b/src/pages/DemoLayout/style.module.less
@@ -141,12 +141,17 @@
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
-	padding: 32px;
+	padding: 24px;
 	border-radius: 16px;
 	border: 2px solid #e6e8ec;
 	margin-right: 16px;
 	margin-bottom: 16px;
 	
+	&*{
+		flex-shrink: 0;
+		flex-grow: 0;
+		
+	}
 	
 	> div {
 		width: 180px;
@@ -157,7 +162,7 @@
 	}
 	
 	&:hover {
-		padding: 34px;
+		padding: 26px;
 		border: none;
 		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 		
@@ -204,5 +209,24 @@
 		border: none;
 		padding-top: 13px;
 		padding-bottom: 12px;
+	}
+}
+
+
+
+.global-window-loading {
+	:global{
+		.ant-spin-container.ant-spin-blur {
+			opacity: .2;
+			&:after {
+				opacity: .6;
+				
+			}
+		}
+		
+		.ant-spin.ant-spin-spinning {
+			position: unset;
+			
+		}
 	}
 }
