--- a/public/index.template.ejs
+++ b/public/index.template.ejs
@@ -1,5 +1,3 @@
-<!-- @format -->
-
 <!DOCTYPE html>
 <html lang="zh-cn">
   <head>
@@ -22,6 +20,6 @@
     <div id="react-app-root"></div>
   </body>
   <%= htmlWebpackPlugin.files.js.reduce((accu , filePath ) => { return accu + `
-  <script src="/${filePath}"></script>
+  <script src="${filePath}"></script>
   \n`; },``) %>
 </html>
