--- a/public/index.template.ejs
+++ b/public/index.template.ejs
@@ -20,6 +20,6 @@
     <div id="react-app-root"></div>
   </body>
   <%= htmlWebpackPlugin.files.js.reduce((accu , filePath ) => { return accu + `
-  <script src="${filePath}"></script>
+  <script src="/${filePath}"></script>
   \n`; },``) %>
 </html>
