stash feat: 修复Reaxes架构withHooks重复渲染问题.

--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -13,64 +13,68 @@
 		font-family: inter, sans-serif, "Microsoft YaHei UI"
 	}
 	
-	.ant-btn {
-		border-color: #f4f4f4;
-	}
 	
-	.ant-dropdown {
+	#react-app-root {
+		.ant-btn {
+			border-color: #f4f4f4;
+		}
 		
-	}
-	
-	.ant-dropdown-menu {
-		border-radius: 12px;
-		padding: 0;
-		transform: rotate(0deg);
-		overflow-x: hidden;
-		box-shadow: 0 17px 62px 0px rgb(0 0 0 / 18%),
-		0 11px 29px 0 rgb(0 0 0 / 8%),
-		0 9px 18px 0px rgb(0 0 0 / 5%);
-		//box-shadow: 0px 16px 64px -48px rgba(31, 47, 70, 0.4);
-	}
-	
-	.ant-dropdown-menu-item {
-		//border-radius: 12px;
-		
-	}
-	
-	.ant-input {
-		
-		
-		&-affix-wrapper {
+		.ant-dropdown {
 			
+		}
+		
+		.ant-dropdown-menu {
+			border-radius: 12px;
+			padding: 0;
+			transform: rotate(0deg);
+			overflow-x: hidden;
+			box-shadow: 0 17px 62px 0px rgb(0 0 0 / 18%),
+			0 11px 29px 0 rgb(0 0 0 / 8%),
+			0 9px 18px 0px rgb(0 0 0 / 5%);
+			//box-shadow: 0px 16px 64px -48px rgba(31, 47, 70, 0.4);
+		}
+		
+		.ant-dropdown-menu-item {
+			//border-radius: 12px;
+			
+		}
+		
+		.ant-input {
+			
+			
+			&-affix-wrapper {
+				
+				border-radius: 12px;
+				border: 1px solid #e6e8ec;
+			}
+		}
+		
+		input.ant-input {
+			line-height: normal;
+			
+		}
+		
+		.ant-select:not(.ant-select-customize-input) .ant-select-selector {
 			border-radius: 12px;
 			border: 1px solid #e6e8ec;
-		}
-	}
-	
-	input.ant-input {
-		line-height: normal;
-		
-	}
-	
-	.ant-select:not(.ant-select-customize-input) .ant-select-selector {
-		border-radius: 12px;
-		border: 1px solid #e6e8ec;
-		height: 40px;
-		
-		.ant-select-selection-search {
-			height: 100%;
-			display: flex;
-			align-items: center;
+			height: 40px;
 			
-		}
-		
-		.ant-select-selection-item{
-			height: 100%;
-			display: flex;
-			align-items: center;
-			line-height: normal;
+			.ant-select-selection-search {
+				height: 100%;
+				display: flex;
+				align-items: center;
+				
+			}
+			
+			.ant-select-selection-item{
+				height: 100%;
+				display: flex;
+				align-items: center;
+				line-height: normal;
+			}
 		}
 	}
+	
 }
 
 .Home-Root {
