--- a/src/pages/Test/dxz-plugin-list/index.module.less
+++ b/src/pages/Test/dxz-plugin-list/index.module.less
@@ -5,11 +5,23 @@
 	
 	//background-color: yellow;
 }
-.aside-nav{
-	aside{
-		&:hover{
-			background-color:#f3f4f5;
-			font-weight:bold;
-		}
+
+.nav{
+	&:hover{
+		background-color: #d9d9d9;
+	}
+	& {
+		display: flex;
+		width: 100%;
+		flex-direction: row;
+		align-items: center;
+		border-radius: 12px;
+		padding: 8px 16px 8px 8px;
+	}
+	p{
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 24px;
+		margin:0px 0px 0px 16px;
 	}
 }
