--- a/src/pages/Test/dxz-voting_proposals/index.module.less
+++ b/src/pages/Test/dxz-voting_proposals/index.module.less
@@ -7,7 +7,13 @@
 	
 }
 
-
+Button.setting_newProposal{
+	display : flex;
+	align-items : center;
+	justify-content : center ;
+	font-size:14px;
+	font-weight: bolder;
+}
 .voting_proposals-container {
 	min-width: max-content;
 	
