--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -13,7 +13,7 @@
 		font-family: inter, sans-serif, "Microsoft YaHei UI"
 	}
 	
-	
+	//todo
 	#react-app-root {
 		.ant-btn {
 			border-color: #f4f4f4;
@@ -55,9 +55,9 @@
 		}
 		
 		.ant-select:not(.ant-select-customize-input) .ant-select-selector {
-			border-radius: 12px;
-			border: 1px solid #e6e8ec;
-			height: 40px;
+			//border-radius: 12px;
+			//border: 1px solid #e6e8ec;
+			//height: 40px;
 			
 			.ant-select-selection-search {
 				height: 100%;
