--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -54,25 +54,25 @@
 			
 		}
 		
-		.ant-select:not(.ant-select-customize-input) .ant-select-selector {
-			//border-radius: 12px;
-			//border: 1px solid #e6e8ec;
-			//height: 40px;
-			
-			.ant-select-selection-search {
-				height: 100%;
-				display: flex;
-				align-items: center;
-				
-			}
-			
-			.ant-select-selection-item{
-				height: 100%;
-				display: flex;
-				align-items: center;
-				line-height: normal;
-			}
-		}
+		//.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+		//	//border-radius: 12px;
+		//	//border: 1px solid #e6e8ec;
+		//	//height: 40px;
+		//	
+		//	.ant-select-selection-search {
+		//		height: 100%;
+		//		display: flex;
+		//		align-items: center;
+		//		
+		//	}
+		//	
+		//	.ant-select-selection-item{
+		//		height: 100%;
+		//		display: flex;
+		//		align-items: center;
+		//		line-height: normal;
+		//	}
+		//}
 	}
 	
 }
