去除svg假页面 feat: join,leave DAO完成 feat: 重构wallet相关的所有业务几乎完成 feat: 封装签名和登录reaxel
bugfix: user-btn 连接钱包鬼影
fix: dts

--- a/src/pages/DAO-Info/style.module.less
+++ b/src/pages/DAO-Info/style.module.less
@@ -1,10 +1,10 @@
 @import "../../styles/variable.module.less";
 
-.dao-avator-wrp {
+.dao-avatar-wrp {
   padding: 32px;
   background-color: @white_1;
   width: 100%;
-  .dao-avator {
+  .dao-avatar {
     display: flex;
     align-items: center;
     justify-content: flex-start;
