--- a/src/pages/_BussinessComponents/Space-List-Item/style.module.less
+++ b/src/pages/_BussinessComponents/Space-List-Item/style.module.less
@@ -8,27 +8,27 @@
 	align-items: center;
 	padding: 24px;
 	border-radius: 16px;
-	border: 2px solid #e6e8ec;
 	margin-right: 16px;
 	margin-bottom: 16px;
+	background-color: white;
+	flex: 0 0 auto;
 	
-	&*{
+	& * {
 		flex-shrink: 0;
 		flex-grow: 0;
 		
 	}
 	
 	> div {
-		width: 180px;
-		height: 246px;
+		width: 179px;
+		height: 252px;
+		flex: 0 0 auto;
 		display: flex;
 		flex-flow: column nowrap;
 		align-items: center;
 	}
 	
 	&:hover {
-		padding: 26px;
-		border: none;
 		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 		
 		> div {
@@ -42,7 +42,7 @@
 	height: 34px;
 	display: flex;
 	flex-flow: row wrap;
-	margin-top: 25px;
+	margin-top: 30px;
 	justify-content: space-around;
 	justify-self: center;
 	
@@ -50,29 +50,48 @@
 
 
 .space-list-item-btn {
-	
-	flex-flow: row nowrap;
-	justify-content: center;
-	align-items: center;
-	background-color: #FCFCFC;
-	color: #1A1D1F;
-	font-weight: bold;
-	font-size: 13px;
-	line-height: normal;
-	padding-top: 11px;
-	padding-bottom: 10px;
-	border : 2px solid #EFEFEF;
-	border-radius: 8px;
-	margin-top: 16px;
-	flex-grow: 1;
-	width: 100%;
-	transition: background-color .3s ease,color .5s ease ;
-	
-	&:hover {
-		background-color: #D2E3FC;
-		color : #3772FF;
-		border: none;
-		padding-top: 13px;
-		padding-bottom: 12px;
+	.btn() {
+		
+		flex-flow: row nowrap;
+		justify-content: center;
+		align-items: center;
+		background-color: white;
+		color: #1a1d1f;
+		font-weight: bold;
+		font-size: 13px;
+		line-height: normal;
+		border: 2px solid #efefef;
+		border-radius: 8px;
+		margin-top: 24px;
+		flex-grow: 1;
+		width: 179px;
+		height : 40px;
+		transition: background-color .3s ease, color .5s ease,border-color .8s ease;
+		flex: 0 0 auto;
 	}
+	
+	&-joined {
+		.btn();
+		
+		&:hover {
+			border-color: #F21361;
+			color : #F21361;
+			&::after {
+				content: "leave";
+				
+			}
+		}
+		&::after {
+			content: "joined";
+		}
+	}
+	&-leaved {
+		.btn();
+		&:hover {
+			background-color: #D2E3FC;
+			color : #3772FF;
+			border: none;
+		}
+	}
+	
 }
