--- a/src/pages/Test/dxz-social-general/index.module.less
+++ b/src/pages/Test/dxz-social-general/index.module.less
@@ -1,12 +1,12 @@
-.add-mark{
-	height: 10px;
-	width: 10px;
-}
-.add-mark::before{
-	content:'';
-	border-bottom: 2px solid #3772ff;
-	position: absolute;
-	top:5px;
-	
-	
+.bio{
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 24px;
+	color: #33383f;
+	display: flex;
+	justify-content: flex-start;
+	flex-flow: row nowrap;
+	height: 28px;
+	align-items: center;
+	margin:32px 0 12px 0;
 }
