feat: create-space基本完成 feat: 添加antd到全局变量

--- a/src/reaxes/Spaces/create-space-modal.module.less
+++ b/src/reaxes/Spaces/create-space-modal.module.less
@@ -91,3 +91,25 @@
 		}
 	}
 }
+
+
+.antd-create-space-modal {
+	
+	> div {
+		height: 100%;
+		width: 100%;
+		margin: 0;
+		max-width: 100%;
+		position: static;
+		padding : 0 ;
+		
+		:global {
+			.ant-modal-content {
+				height: 100%;
+			}
+			.ant-modal-body {
+				height: calc(100% - 53px);
+			}
+		}
+	}
+}
