--- a/src/pages/Test/dxz-space-home-joined/index.module.less
+++ b/src/pages/Test/dxz-space-home-joined/index.module.less
@@ -16,14 +16,7 @@
 .member-item:not(:last-child){
 	margin-bottom: 8px;
 }
-.some-intro{
-	font-size: 14px;
-	color: rgb(119, 126, 145);
-	font-weight: 500;
-	padding-bottom: 32px;
-	margin-top: 16px;
-	margin-bottom: 0px;
-}
+
 .content-left{
 	display: flex;
 	flex-flow: column wrap;
@@ -46,24 +39,7 @@
 	margin-top: 16px;
 	background-color: rgb(244, 245, 246);
 }
-.edit-cover{
-	background-color: rgb(20, 20, 22);
-	border-radius: 12px;
-	padding: 16px;
-	display: flex;
-	align-items: center;
-	height: 48px;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 16px;
-	color: rgb(252, 252, 253);
-	position: absolute;
-	bottom: 24px;
-	right: 32px;
-	top: 228px;
-	flex-flow: row nowrap;
-	user-select: none;
-}
+
 .space-join{
 	display: flex;
 	justify-content: space-between;
@@ -78,4 +54,49 @@
 	font-weight: 600;
 	line-height: 39px;
 	vertical-align: middle;
+}
+
+
+
+.space-info {
+	
+	.banner {
+		background-color : #E6E8EC;
+		
+		.edit-cover {
+			background-color: rgb(20, 20, 22);
+			border-radius: 12px;
+			padding: 16px;
+			display: none;
+			align-items: center;
+			height: 48px;
+			font-weight: 700;
+			font-size: 14px;
+			line-height: 16px;
+			color: rgb(252, 252, 253);
+			position: absolute;
+			bottom: 24px;
+			right: 32px;
+			top: 228px;
+			flex-flow: row nowrap;
+			user-select: none;
+			cursor: pointer;
+			
+		}
+		&:hover {
+			.edit-cover {
+				display: flex;
+			}
+		}
+	}
+	
+	.bios {
+		font-size: 14px;
+		color: rgb(119, 126, 145);
+		font-weight: 500;
+		margin-top: 16px;
+		height: 66px;
+		width: 568px;
+		margin-bottom: 0;
+	}
 }
