--- a/src/pages/Test/dxz-edit-profile-pop/index.module.less
+++ b/src/pages/Test/dxz-edit-profile-pop/index.module.less
@@ -77,7 +77,17 @@
 	font-size: 16px;
 	line-height: 24px;
 	color: #23262f;
-	margin-bottom: 0;
+	margin-bottom: 2px;
+}
+
+.edit-input {
+	&::placeholder {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: -0.01em;
+		color: #777e91;
+	}
 }
 
 .account-title_2 {
@@ -85,7 +95,20 @@
 	font-size: 16px;
 	line-height: 24px;
 	color: #23262f;
-	margin: 32px 0 0 0;
+	margin: 32px 0 2px 0;
+}
+
+.subtitle {
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 24px;
+	color: #33383f;
+	display: flex;
+	justify-content: flex-start;
+	flex-flow: row nowrap;
+	height: 28px;
+	align-items: center;
+	margin: 30px 0 12px 0;
 }
 
 .last-intro {
