--- a/src/pages/Test/dxz-social-general/index.module.less
+++ b/src/pages/Test/dxz-social-general/index.module.less
@@ -1,4 +1,34 @@
-.bio{
+.setting-tab {
+	.style(){
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		padding: 8px 16px;
+		width: 280px;
+		height: 40px;
+		background: #fcfcfc;
+		border-radius: 8px;
+		font-weight: 600;
+		font-size: 15px;
+		line-height: 24px;
+		cursor:pointer;
+
+	}
+	.style();
+	
+	&:hover {
+		background: #efefef;
+	}
+	
+	&-selected {
+		.style();
+		color: #6F767E;
+		background: #efefef;
+	}
+}
+
+.bio {
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 24px;
@@ -8,9 +38,10 @@
 	flex-flow: row nowrap;
 	height: 28px;
 	align-items: center;
-	margin:32px 0 12px 0;
+	margin: 32px 0 12px 0;
 }
-.email{
+
+.email {
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 24px;
@@ -20,15 +51,17 @@
 	flex-flow: row nowrap;
 	height: 28px;
 	align-items: center;
-	margin:32px 0 12px 0;
+	margin: 32px 0 12px 0;
 }
-.divider{
-	content:'';
+
+.divider {
+	content: '';
 	margin: 48px 0;
 	border-bottom: 1px solid #efefef;
 	width: 660px;
 }
-.container{
+
+.container {
 	padding: 24px;
 	border-radius: 12px;
 	background-color: rgb(255, 255, 255);
@@ -37,7 +70,8 @@
 	justify-content: flex-start;
 	margin-bottom: 30px;
 }
-.net-info{
+
+.net-info {
 	display: inline-flex;
 	align-items: center;
 	font-size: 14px;
@@ -45,13 +79,15 @@
 	line-height: 28px;
 	margin-bottom: 0px;
 }
-.pic-box{
+
+.pic-box {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	margin: 36px 0px 31px
 }
-.settings-select{
+
+.settings-select {
 	margin-bottom: 8px;
 	color: rgb(177, 181, 195);
 	font-size: 12px;
@@ -60,36 +96,56 @@
 }
 
 
-.ant-select-single.ant-select-show-arrow span.ant-select-selection-item{
-	padding-right: 0px;
-	margin-right: 20px;
-	font-size: 14px;
-	color: #525c76;
-	font-weight: bolder;
-	padding-right: 0px;
-}
-span.ant-select-selection-item{
-	padding-left: 8px;
-	
-	
-}
-span.ant-select-arrow{
-	color: #525c76;
-	margin-left: 8px;
-}
-.ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
-	width: 100%;
-	padding-left: 0px;
-}
-
-span.ant-input-group-addon{
-	border-radius: 0px 12px 12px 0px;
+.container{
+	:global{
+		.ant-select-multiple span.ant-select-selection-item {
+			padding: 0px 0px;
+			margin: 0px 2px 0px 0px;
+			background-color: #3772ff;
+			color: white;
+			padding: 6px 16px;
+			border-radius: 12px;
+			height: 40px;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			font-size: 16px;
+			justify-content: space-around;
+			min-width: 30px;
+		}
+		.selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
+			line-height: 42px;
+			height: 40px;
+			width: 100%;
+		}
+		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector{
+			width: 100%;
+		}
+		.ant-select-multiple .ant-select-selection-item-remove svg {
+			margin-left: 8px;
+		}
+		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
+			&:local(.voting-type_box) {
+				.ant-select-selector {
+					border: 2px solid #e6e8ec;
+					padding: 1px 2px;
+					border-radius: 12px;
+					height: 48px;
+				}
+				
+				.ant-select-selection-item-remove {
+					display: flex;
+				}
+			}
+		}
+	}
 }
 .selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
 	line-height: 42px;
 	height: 40px;
 	width: 100%;
 }
+
 .ant-select-multiple span.ant-select-selection-item {
 	padding: 0px 0px;
 	margin: 0px 2px 0px 0px;
