--- a/src/pages/Test/dxz-social-general/index.module.less
+++ b/src/pages/Test/dxz-social-general/index.module.less
@@ -13,6 +13,7 @@
 		font-size: 15px;
 		line-height: 24px;
 		cursor:pointer;
+		user-select: none;
 
 	}
 	.style();
@@ -39,9 +40,11 @@
 	height: 28px;
 	align-items: center;
 	margin: 32px 0 12px 0;
+	user-select: none;
 }
 
 .email {
+	user-select: none;
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 24px;
@@ -72,6 +75,7 @@
 }
 
 .net-info {
+	user-select: none;
 	display: inline-flex;
 	align-items: center;
 	font-size: 14px;
@@ -81,6 +85,7 @@
 }
 
 .pic-box {
+	user-select: none;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -88,6 +93,7 @@
 }
 
 .settings-select {
+	user-select: none;
 	margin-bottom: 8px;
 	color: rgb(177, 181, 195);
 	font-size: 12px;
