UI : 完善space-profile

--- a/src/pages/Test/dxz-social-general/index.module.less
+++ b/src/pages/Test/dxz-social-general/index.module.less
@@ -42,6 +42,7 @@
 	align-items: center;
 	margin: 32px 0 12px 0;
 	user-select: none;
+	width: fit-content;
 }
 
 .email {
@@ -73,6 +74,7 @@
 	display: flex;
 	justify-content: flex-start;
 	margin-bottom: 30px;
+	height: fit-content;
 }
 
 .net-info {
@@ -93,18 +95,18 @@
 	margin: 36px 0px 31px
 }
 
-.settings-select {
+.settings-title {
 	user-select: none;
 	margin-bottom: 8px;
-	color: rgb(177, 181, 195);
+	color: #b1b5c3;
 	font-size: 12px;
 	font-weight: 700;
 	line-height: 16px;
 }
 
 
-.container{
-	:global{
+.container {
+	:global {
 		.ant-select-multiple span.ant-select-selection-item {
 			padding: 0px 0px;
 			margin: 0px 2px 0px 0px;
@@ -120,24 +122,31 @@
 			justify-content: space-around;
 			min-width: 30px;
 		}
-		.selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
-			line-height: 42px;
-			height: 40px;
-			width: 100%;
+		
+		& {
+			.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector {
+				width: 100%;
+				background: #fcfcfc;
+			}
 		}
-		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector{
-			width: 100%;
-		}
+		
 		.ant-select-multiple .ant-select-selection-item-remove svg {
 			margin-left: 8px;
 		}
+		
 		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
 			&:local(.voting-type_box) {
 				.ant-select-selector {
-					border: 2px solid #e6e8ec;
+					border: 1px solid #e6e8ec;
 					padding: 1px 2px;
 					border-radius: 12px;
-					height: 48px;
+					height: 48px;}
+				
+				&::placeholder {
+					font-weight: 600;
+					font-size: 14px;
+					line-height: 24px;
+					color: #777e91;
 				}
 				
 				.ant-select-selection-item-remove {
@@ -147,6 +156,7 @@
 		}
 	}
 }
+
 .selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
 	line-height: 42px;
 	height: 40px;
@@ -160,7 +170,6 @@
 	color: white;
 	padding: 6px 16px;
 	border-radius: 12px;
-	//width: 139px;
 	height: 40px;
 	display: flex;
 	flex-direction: row;
@@ -171,7 +180,6 @@
 }
 
 .ant-select-multiple .ant-select-selection-item-remove svg {
-	//display: none;
 	margin-left: 8px;
 }
 
