feat(FE-96-components):input、selectTag组件封装

--- a/src/styles/variable.module.less
+++ b/src/styles/variable.module.less
@@ -21,3 +21,30 @@
 @font_4: 20px;
 @font_5: 12px;
 @font_6: 24px;
+
+// 色号（新）
+// primary
+@primary_1: #0070F3;
+@primary_2: #7928CA;
+@primary_3: #17C964;
+@primary_4: #F5A623;
+@primary_5: #F21361;
+
+// secondary
+@secondary_1: rgba(0, 112, 243, 0.3);
+@secondary_2: #CABDFF;
+@secondary_3: #B5E4CA;
+@secondary_4: #FFD88D;
+@secondary_5: #FFBC99;
+
+// neutrals
+@neutrals_0: #000;
+@neutrals_F: #fff;
+@neutrals_1: #141416;
+@neutrals_2: #222528;
+@neutrals_3: #313436;
+@neutrals_4: #777E91;
+@neutrals_5: #B1B5C4;
+@neutrals_6: #E6E8EC;
+@neutrals_7: #F4F5F6;
+@neutrals_8: #FCFCFD;
