--- a/src/common/Xcomponents/SelectTags/index.module.less
+++ b/src/common/Xcomponents/SelectTags/index.module.less
@@ -5,12 +5,14 @@
 
   :global {
     .ant-select-selector {
-      border-radius: 12px !important;
+      box-sizing: border-box !important;
       border: 2px solid @neutrals_5 !important;
+      border-radius: 12px !important;
       box-shadow: none !important;
     }
 
     .ant-select-selection-item {
+      box-sizing: border-box;
       border-radius: 8px !important;
     }
   }
