--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -82,10 +82,10 @@
 	height: 100%;
 	overflow: auto;
 	
-	div {
-		
-		display: flex;
-	}
+	//div {
+	//	
+	//	display: flex;
+	//}
 	
 	
 	.left-side {
