--- a/src/pages/_BussinessComponents/Layout_Header/style.module.less
+++ b/src/pages/_BussinessComponents/Layout_Header/style.module.less
@@ -96,6 +96,7 @@
 	width: 100%;
 	padding: 16px 32px;
 	flex-flow: row nowrap;
+	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	
@@ -104,6 +105,7 @@
 		height: 100%;
 		align-items: center;
 		float: right;
+		display:flex;
 	}
 	
 	&::before{
