--- a/src/pages/_BussinessComponents/Space-List-Item/style.module.less
+++ b/src/pages/_BussinessComponents/Space-List-Item/style.module.less
@@ -1,4 +1,3 @@
-
 .space-list-card {
 	transition: box-shadow 0.35s ease;
 	user-select: none;
@@ -7,21 +6,20 @@
 	flex-flow: column nowrap;
 	align-items: center;
 	padding: 24px;
-	border-radius: 16px;
+	border-radius: 12px;
 	margin-right: 16px;
 	margin-bottom: 16px;
 	background-color: white;
 	flex: 0 0 auto;
+	width: 227px;
+	height: 300px;
 	
 	& * {
 		flex-shrink: 0;
 		flex-grow: 0;
-		
 	}
 	
 	> div {
-		width: 179px;
-		height: 252px;
 		flex: 0 0 auto;
 		display: flex;
 		flex-flow: column nowrap;
@@ -32,8 +30,6 @@
 		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 		
 		> div {
-			//width: 184px;
-			//height: 248px;
 		}
 	}
 }
@@ -43,21 +39,25 @@
 	display: flex;
 	flex-flow: row wrap;
 	margin-top: 30px;
-	justify-content: space-around;
-	justify-self: center;
-	
+	justify-content: center;
+	flex-flow: row wrap;
+	text-align: center;
 }
 
 
 .space-list-item-btn {
+	color: #1a1d1f;
+	font-weight: 700;
+	font-size: 13px;
+	line-height: normal;
 	.btn() {
-		
+		display: flex;
 		flex-flow: row nowrap;
 		justify-content: center;
 		align-items: center;
 		background-color: white;
 		color: #1a1d1f;
-		font-weight: bold;
+		font-weight: 700;
 		font-size: 13px;
 		line-height: normal;
 		border: 2px solid #efefef;
@@ -65,8 +65,8 @@
 		margin-top: 24px;
 		flex-grow: 1;
 		width: 179px;
-		height : 40px;
-		transition: background-color .3s ease, color .5s ease,border-color .8s ease;
+		height: 40px;
+		transition: background-color .3s ease, color .5s ease, border-color .8s ease;
 		flex: 0 0 auto;
 	}
 	
@@ -74,22 +74,26 @@
 		.btn();
 		
 		&:hover {
-			border-color: #F21361;
-			color : #F21361;
+			border-color: #f21361;
+			color: #f21361;
+			
 			&::after {
 				content: "leave";
 				
 			}
 		}
+		
 		&::after {
 			content: "Joined";
 		}
 	}
+	
 	&-leaved {
 		.btn();
+		
 		&:hover {
-			background-color: #D2E3FC;
-			color : #3772FF;
+			background-color: #d2e3fc;
+			color: #3772ff;
 			border: none;
 		}
 	}
