chore(FE-96-components)：格式化

--- a/src/common/Xcomponents/Input/index.module.less
+++ b/src/common/Xcomponents/Input/index.module.less
@@ -1,4 +1,4 @@
-@import '/src/styles/variable.module.less';
+@import "/src/styles/variable.module.less";
 
 .daotion-input {
   display: inline-block;
@@ -41,7 +41,6 @@
       }
 
       &-affix-wrapper {
-
         border-radius: 12px;
         border: 1px solid #e6e8ec;
       }
