--- a/src/common/Xcomponents/SelectTags/index.module.less
+++ b/src/common/Xcomponents/SelectTags/index.module.less
@@ -23,3 +23,33 @@
     }
   }
 }
+
+
+:global {
+  body {
+    .daotion-dropdown {
+      .ant-select-dropdown {
+        padding: 4px;
+        border: 2px solid #E6E8EC;
+        border-radius: 12px;
+      }
+
+      .ant-select-item-option {
+        border-radius: 12px !important;
+        font-weight: 600;
+        font-size: 14px;
+      }
+
+      .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+        color: @primary_1;
+        background-color: @neutrals_F;
+        font-weight: 600;
+        font-size: 14px;
+
+        &:hover {
+          background-color: @neutrals_7;
+        }
+      }
+    }
+  }
+}
