--- a/src/pages/Test/dxz-space-home-joined/index.module.less
+++ b/src/pages/Test/dxz-space-home-joined/index.module.less
@@ -28,7 +28,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 60px;
-	margin: 0px 0px 32px;
+	margin: 0 0 32px 0;
 	width: 1200px;
 }
 .content-box{
