--- a/src/pages/Test/dxz-space-info-homepage/index.module.less
+++ b/src/pages/Test/dxz-space-info-homepage/index.module.less
@@ -81,7 +81,7 @@
 			flex-flow: row nowrap;
 			user-select: none;
 			cursor: pointer;
-			
+			transition: opacity ease 0.3s;
 		}
 		&:hover {
 			.edit-cover {
