--- a/src/styles/reaxels.module.less
+++ b/src/styles/reaxels.module.less
@@ -19,3 +19,23 @@
 		
 	}
 }
+.btn-setting {
+	
+	
+	&:hover {
+		> span {
+			&::after {
+				content : "leave";
+				
+			}
+		}
+	}
+	
+	> span {
+		&::after {
+			content : "joined";
+			
+		}
+		
+	}
+}
