UI : 样式移到less文件

--- a/src/pages/Test/dxz-space-list/index.module.less
+++ b/src/pages/Test/dxz-space-list/index.module.less
@@ -77,3 +77,31 @@
 	top: 10px;
 	display: none;
 }
+.container{
+	display: flex;
+	flex-flow: row nowrap;
+	background-color: rgb(244, 244, 244);
+	height: 100%;
+}
+.space-box{
+	background: rgb(255, 255, 255);
+	height: 100%;
+	display: flex;
+	flex-flow: column wrap;
+	padding: 16px 8px;
+	border-radius: 12px;
+	justify-content: space-between;
+	position: relative;
+	margin-left: 4px;
+}
+.divider1{
+	background: rgb(230, 232, 236);
+	width: 40px;
+	height: 1px;
+}
+.divider2{
+	height: 2px;
+	width: 40px;
+	background: rgb(230, 232, 236);
+	margin-bottom: 12px;
+}
