UI : 修改关闭按钮

--- a/src/styles/reaxels.module.less
+++ b/src/styles/reaxels.module.less
@@ -140,12 +140,12 @@
 			.ant-modal-footer {
 				padding: 0 0 0 0;
 			}
-			
 			.ant-modal-close-x {
-				position: fixed;
-				top:32px;
-				right: 32px;
+				position:absolute;
+				right: -266px;
+				top: -44px;
 			}
+			
 		}
 	}
 }
