UI : 测试组件并应用到space-profile中

--- a/src/common/Xcomponents/Select/index.module.less
+++ b/src/common/Xcomponents/Select/index.module.less
@@ -7,7 +7,7 @@
       border-radius: 12px !important;
       box-shadow: none !important;
       background-color: @neutrals_F !important;
-      border: 2px solid transparent !important;
+      border: 1px solid #efefef !important;
     }
 
     .ant-select.ant-select-focused .ant-select-selector {
