--- a/src/pages/Test/dxz-social-general/index.module.less
+++ b/src/pages/Test/dxz-social-general/index.module.less
@@ -29,22 +29,9 @@
 	}
 }
 
-.bio {
-	font-size: 14px;
-	font-weight: 600;
-	line-height: 24px;
-	color: #33383f;
-	display: flex;
-	justify-content: flex-start;
-	flex-flow: row nowrap;
-	height: 28px;
-	align-items: center;
-	margin: 32px 0 12px 0;
-	user-select: none;
-	width: fit-content;
-}
 
-.email {
+
+.sub-title {
 	user-select: none;
 	font-size: 14px;
 	font-weight: 600;
@@ -91,7 +78,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	margin: 36px 0px 31px
+	margin: 32px 0px 31px
 }
 
 .settings-title {
@@ -162,21 +149,6 @@
 	width: 100%;
 }
 
-.ant-select-multiple span.ant-select-selection-item {
-	padding: 0px 0px;
-	margin: 0px 2px 0px 0px;
-	background-color: #3772ff;
-	color: white;
-	padding: 6px 16px;
-	border-radius: 12px;
-	height: 40px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	font-size: 13px;
-	justify-content: space-around;
-	min-width: 30px;
-}
 
 .ant-select-multiple .ant-select-selection-item-remove svg {
 	margin-left: 8px;
