UI : 更新delete-tab样式,添加button组件

--- a/src/pages/Test/dxz-UI-kits/index.module.less
+++ b/src/pages/Test/dxz-UI-kits/index.module.less
@@ -7,7 +7,13 @@
 			.ant-modal-body {
 				padding: 32px;
 			}
-			
+			.ant-modal-close-x{
+				position: absolute;
+				right:32px;
+				top:32px;
+				height: 40px;
+				width: 40px;
+			}
 		}
 	}
 }
@@ -18,6 +24,7 @@
 	line-height: 40px;
 	color: #23262f;
 	margin:0 0;
+	user-select: none;
 }
 
 .intro {
@@ -26,4 +33,5 @@
 	line-height: 24px;
 	color: #23262f;
 	margin:48px 0;
+	user-select: none;
 }
