--- a/src/styles/variable.module.less
+++ b/src/styles/variable.module.less
@@ -24,7 +24,7 @@
 
 // 色号（新）
 // primary
-@primary_1: #0070F3;
+@primary_1: #3772ff;
 @primary_2: #7928CA;
 @primary_3: #17C964;
 @primary_4: #F5A623;
