--- a/src/pages/Test/dxz-my-profile/index.module.less
+++ b/src/pages/Test/dxz-my-profile/index.module.less
@@ -10,11 +10,11 @@
 	background: rgb(244, 245, 246);
 	display: flex;
 	align-content: center;
-	flex-flow: column wrap;
+	flex-flow: column nowrap;
 	width: 100%;
-	min-height: fit-content;
-	padding-bottom: 64px;
-	padding-top: 32px;
+	height: fit-content;
+	padding-bottom: 100px;
+	padding-top: 40px;
 }
 .space-name {
 	color: #141416;
@@ -75,7 +75,7 @@
 	border-radius: 132px;
 	border: 4px solid rgb(255, 255, 255);
 }
-.my-acatar{
+.my-avatar{
 	border-radius: 132px;
 	width: 132px;
 	height: 132px;
@@ -83,8 +83,30 @@
 	object-position: 50% 50%;
 	visibility: hidden;
 }
+.card-top{
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 20px;
+	text-align: center;
+	color: #353945;
+	align-items: center;
+}
+.gray-box{
+	height: 24px;
+	display: flex;
+	align-items: center;
+	background: #E6E8EC;
+	border-radius: 24px;
+	width: fit-content;
+	padding: 2px 8px;
+}
+.text{
+	margin-left: 4px;
+}
 .space-info {
-	
 	.banner {
 		background-color: #e6e8ec;
 		position: relative;
@@ -119,7 +141,6 @@
 			}
 		}
 	}
-	
 	.bios {
 		font-size: 14px;
 		color: rgb(119, 126, 145);
@@ -128,6 +149,56 @@
 		height: 66px;
 		width: 568px;
 		margin-bottom: 0;
+	}
+	.joined-space-box{
+		width: 1136px;
+		height: 428px;
+		display: flex;
+		justify-content: space-between;
+		align-content: space-between;
+		flex-flow: row wrap;
+		margin-top: 24px;
+	}
+	.joined-space-card{
+		padding: 16px;
+		width: 214.4px;
+		height: 206px;
+		background: #FFFFFF;
+		border: 1px solid #E6E8EC;
+		border-radius: 12px;
+		display: block;
+		text-align: center;
+		&:hover{
+			box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+		}
+	}
+	.space_name{
+		font-weight: 600;
+		font-size: 16px;
+		line-height: 24px;
+		text-align: center;
+		color: #141416;
+		margin-top: 16px;
+	}
+	:global{
+		.ant-tabs-tab-btn{
+			font-weight: 600;
+			font-size: 16px;
+			line-height: 48px;
+			text-align: center;
+			color: #6F767E;
+			user-select: none;
+			&:hover{
+				color: #141416;
+			}
+		}
+		.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+			color: #141416;
+		}
+		.ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar{
+			background: #141416;
+			min-height: 3px;
+		}
 	}
 	
 }
