--- a/src/pages/Test/dxz-my-profile/index.module.less
+++ b/src/pages/Test/dxz-my-profile/index.module.less
@@ -9,7 +9,7 @@
 .space-info{
 	background: rgb(244, 245, 246);
 	display: flex;
-	align-content: center;
+	align-items: center;
 	flex-flow: column nowrap;
 	width: 100%;
 	height: fit-content;
@@ -172,7 +172,7 @@
 			box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 		}
 	}
-	.space_name{
+	.card-space-name{
 		font-weight: 600;
 		font-size: 16px;
 		line-height: 24px;
@@ -181,6 +181,14 @@
 		margin-top: 16px;
 	}
 	:global{
+		.ant-tabs-nav-list{
+			display: flex;
+			width: 418px;
+			justify-content: space-between;
+		}
+		.ant-tabs-tab{
+			padding:0 0 0 0;
+		}
 		.ant-tabs-tab-btn{
 			font-weight: 600;
 			font-size: 16px;
@@ -197,7 +205,7 @@
 		}
 		.ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar{
 			background: #141416;
-			min-height: 3px;
+			min-height: 2px;
 		}
 	}
 	
