--- a/src/pages/Test/dxz-social-select-modal/index.module.less
+++ b/src/pages/Test/dxz-social-select-modal/index.module.less
@@ -1,12 +1,4 @@
 
-.content{
-	border-radius: 20px;
-	background: #FFFFFF;
-	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
-	width: 480px;
-	height: fit-content;
-	padding:32px;
-}
 .main-title{
 	font-weight: 700;
 	font-size: 32px;
@@ -14,11 +6,7 @@
 	color: #23262F;
 	margin:0;
 	padding:0;
-}
-.title-close-box{
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
+	user-select: none;
 	padding-bottom: 24px;
 }
 .intro{
@@ -26,7 +14,7 @@
 	font-size: 16px;
 	line-height: 24px;
 	color: #23262F;
-	
+	user-select: none;
 }
 .divider{
 	height: 1px;
@@ -36,6 +24,7 @@
 }
 .item-text{
 	padding-left: 16px;
+	user-select: none;
 }
 .social-media {
 	font-weight: 600;
@@ -64,7 +53,7 @@
 }
 .social-media-box{
 	width: 416px;
-	height: 256px;
+	height: 240px;
 	justify-content: space-between;
 	display: flex;
 	flex-flow: row wrap;
