feat(FE-35-edit-profile):edit profile逻辑补充

--- a/src/pages/EditProfile/index.module.less
+++ b/src/pages/EditProfile/index.module.less
@@ -86,9 +86,9 @@
 }
 
 .account-info {
-  display: flex;
-  justify-content: flex-start;
-  flex-flow: column wrap;
+  //display: flex;
+  //justify-content: flex-start;
+  //flex-flow: column wrap;
   width: 100%;
 }
 
