--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -1,5 +1,80 @@
 @import "../../styles/variable.module.less";
 
+.join-btn{
+	
+	:global {
+		width: fit-content;
+		height: fit-content;
+		padding: 0;
+		border: none;
+		box-shadow: none;
+		span {
+			border-radius: 12px;
+			background: #0070F3;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 140px;
+			height: 48px;
+			font-size: 16px;
+			font-weight: 600;
+			color: #ffffff;
+		}
+		
+	}
+}
+.joined-btn {
+	:global {
+		width: fit-content;
+		height: fit-content;
+		padding: 0;
+		border: none;
+		box-shadow: none;
+		span {
+			font-size: 16px;
+			font-weight: 600;
+		}
+		
+	}
+	&:hover {
+		> span {
+			&::after {
+				transition: all .5s ease;
+				border: 1px solid #F21361;
+				border-radius: 12px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 138px;
+				height: 46px;
+				background: #FFE6EA;
+				content: "leave";
+				color: #ef466f;
+			}
+		}
+	}
+	
+	
+	
+	> span {
+		&::after {
+			transition: all .5s ease;
+			border: 1px solid #f4f5f6;
+			border-radius: 12px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 138px;
+			height: 46px;
+			background: #f4f5f6;
+			content: "joined";
+			color: #777e90;
+		}
+		
+	}
+}
+
+
 .space-avatar-wrp {
 	padding: 32px;
 	background-color: @white_1;
@@ -154,12 +229,6 @@
 
 
 
-
-
-
-
-
-
 .member-lists::-webkit-scrollbar{
 	width:4px;
 	height:128px;
@@ -178,7 +247,21 @@
 .member-item:not(:last-child){
 	margin-bottom: 8px;
 }
-
+.member-lists{
+	margin-top: 32px;
+	display: block;
+	overflow: auto;
+	flex: 1 1 0%;
+	height: 775px;
+	user-select: none;
+	position: absolute;
+	right: 0px;
+	width: 316px;
+}
+.share_join-box{
+	display: flex;
+	align-items: center;
+}
 .content-left{
 	display: flex;
 	flex-flow: column wrap;
@@ -219,12 +302,69 @@
 }
 
 
-
+.space-info{
+	background: rgb(244, 245, 246);
+	display: flex;
+	justify-content: center;
+	flex-flow: column nowrap;
+	min-width: fit-content;
+	min-height: fit-content;
+	padding-bottom: 100px;
+}
+.cover-img{
+	border-radius: 12px 12px 0px 0px;
+	min-width: 100%;
+	height: 300px;
+	object-fit: cover;
+	object-position: 50% 50%;
+}
+.avatar-box{
+	position: absolute;
+	top: 204px;
+	left: 32px;
+	background-color: rgb(238, 238, 238);
+	border-radius: 16px;
+}
+.space-avatar{
+	border-radius: 16px;
+	width: 116px;
+	height: 116px;
+	object-fit: cover;
+	object-position: 50% 50%;
+	border: 4px solid rgb(255, 255, 255);
+}
+.info-box{
+	padding: 0px 32px 34px;
+	width: 1200px;
+	border-radius: 0px 0px 12px 12px;
+	background-color: rgb(255, 255, 255);
+	display: block;
+}
+.sharing-box{
+	display: flex;
+	align-items: center;
+}
+.social-medias{
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+}
+.content-right{
+	width: 340px;
+	background-color: rgb(255, 255, 255);
+	border-radius: 12px;
+	padding: 24px;
+	display: block;
+	position: relative;
+}
 .space-info {
-	
 	.banner {
 		background-color : #E6E8EC;
-		
+		position: relative;
+		width: 1200px;
+		display: flex;
+		justify-content: center;
+		border-radius: 12px 12px 0px 0px;
 		.edit-cover {
 			background-color: rgb(20, 20, 22);
 			border-radius: 12px;
